# rag-system

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  deploy.yml  ephemeral-lifecycle.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: router_agent.py
backend/app/agents/prompts/: document_qa.py  router.py  text_to_sql.py
backend/app/agents/tools/: document_search.py  sql_db.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  documents.py  health.py
backend/app/api/v1/schemas/: chat.py  documents.py
backend/app/core/: auth.py  exceptions.py  logging.py  metrics.py  sql_safety.py
backend/app/db/: models.py  session.py
backend/app/document_processing/: chunker.py  extractors.py
backend/app/services/: chat_service.py  document_service.py  embedding_service.py  history_service.py  sql_service.py  vector_store.py
backend/scripts/: check_query_points.py  create_tables.py  inspect_client.py  inspect_methods.py
backend/tests/: conftest.py
backend/tests/unit/: test_chat_service.py  test_chunker.py  test_document_service.py  test_extractors.py  test_router_agent.py  test_sql_safety.py
docs/: implementation_plan.md  local-act-guide.md  task.md  walkthrough.md  walkthrough_phase3.md  walkthrough_phase4.md  walkthrough_phase5.md  walkthrough_phase6.md  walkthrough_phase7.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Chat/: ChatInterface.tsx  InputArea.tsx  MessageBubble.tsx
frontend/src/components/Layout/: Sidebar.tsx
frontend/src/hooks/: useChatStream.ts  useChatStream_draft.ts
frontend/src/services/: api.ts
frontend/src/types/: chat.ts
infra/docker/: .env.example  docker-compose.yml
infra/docker/init-scripts/: 01-create-databases.sql  02-northwind-schema.sql  03-northwind-data.sql
infra/docker/prometheus/: prometheus.yml
infra/terraform/bootstrap/: main.tf
infra/terraform/ephemeral/: main.tf
infra/terraform/permanent/: main.tf
infra/terraform/permanent/scripts/: check_availability.ps1
scripts/: setup.sh  test-ci.ps1
