[project]
name = "rag-system-backend"
version = "1.0.0"
description = "RAG System Backend - Document Q&A and Text-to-SQL"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # LangChain / AI
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=1.50.0",

    # Vector DB
    "qdrant-client>=1.12.0",

    # Document Processing
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",

    # Utilities
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "sqlparse>=0.5.0",
    "sse-starlette>=2.1.0",

    # Observability
    "prometheus-fastapi-instrumentator>=7.0.0",
    "langsmith>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "bandit[toml]>=1.8.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = [
    "S101", # assert used (ok in tests)
    "B008", # do not perform function call in argument defaults (FastAPI Depends)
    "S105", # hardcoded password (ok in config defaults)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "integration: integration tests requiring external services",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
